cabal-version:       2.2
name:                BoardGames
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:
author:              James McNeill
maintainer:          mcneja@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  default-language:    Haskell2010
  build-depends:       base == 4.*
  -- other-modules:
  -- other-extensions:
  -- hs-source-dirs:

executable Hammurabi
  import:              shared-properties
  main-is:             Hammurabi.hs
  build-depends:       random, MonadRandom

executable HexDame
  import:              shared-properties
  main-is:             HexDame.hs
  build-depends:       containers, gloss, random

executable Crash
  import:              shared-properties
  main-is:             Crash.hs
  build-depends:       containers, gloss, random, random-shuffle

executable Delve
  import:              shared-properties
  main-is:             Delve.hs
  build-depends:       containers, gloss, random

executable Galaxy
  import:              shared-properties
  main-is:             Galaxy.hs
  build-depends:       containers, gloss, random

executable XiangHex
  import:              shared-properties
  main-is:             XiangHex.hs
  build-depends:       gloss

executable Xia
  import:              shared-properties
  main-is:             Xia.hs
  build-depends:       containers, gloss, random, set-extra

executable TestGameTree
  import:              shared-properties
  main-is:             TestGameTree.hs
  build-depends:       containers, random

executable TicTacToe
  import:              shared-properties
  main-is:             TicTacToe.hs
  build-depends:       gloss
